Headers not showing in mobile fixed. header is now sticky. and some minor fixes.

--- a/src/index.css
+++ b/src/index.css
@@ -48,7 +48,7 @@ h1 {
 }
 
 .navbar {
-  height: 20vh;
+  min-height: 20vh;
 }
 
 .full-height-content {
